# SGEyes2

./: CMakeLists.txt  README.md
controller/: CMakeLists.txt  main.cpp  request_manager.cpp  request_manager.hpp  server.cpp  server.hpp
design/: overview.drawio
doc/: Doxyfile
doc/html/: annotated.html  classconfig__manager-members.html  classconfig__manager.html  classes.html  classlistener__service-members.html  classlistener__service.html  classlogger-members.html  classlogger.html  classrequest__manager-members.html  classrequest__manager.html  classserver-members.html  classserver.html  classservice__manager-members.html  classservice__manager.html  classwatcher__manager-members.html  classwatcher__manager.html  config__manager_8hpp_source.html  define_8hpp_source.html  dir_08e329178fd1abe73da96f20b637b3db.html  dir_1040b90090d7298bac0b2ebea651e019.html  dir_26e161bd706b689737ea0ef524ddc480.html  dir_3e05ecebcd4ec354991c0fe7777741d7.html  dir_4bf84cee8c4ad77ec341c13003921ab6.html  dir_6f89ed7b4090d7d1d534d290e3b8a392.html  dir_98f3c9490cdf79f1905bfac13c5cf365.html  dir_992d0a8ec0d85dbde292f2233a97edc9.html  dir_a8b78a19bd50a3cabecea023043ca1be.html  dir_d3bff1ab3a40b4e5d0775c67ace1b0da.html  dir_d3e6df93dc93fbf3f0638faacdbb195d.html  dir_e3da2e21cd04b3876441f71203b18d9f.html  dir_e55ea0652de5e27f5070c71d44e14f52.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  files.html  foo_8h_source.html  functions.html  functions_func.html  index.html  listener__service_8hpp_source.html  logger_8hpp_source.html  logger__define_8hpp_source.html  (+7 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  pages_0.js  searchdata.js
watcher/: CMakeLists.txt  main.cpp  watcher_manager.cpp  watcher_manager.hpp
watcher/configuration/: config.json  config_manager.cpp  config_manager.hpp
watcher/services/: listener_service.cpp  listener_service.hpp  service_manager.cpp  service_manager.hpp
